Fix up mobile spacing for blog previews. Remove redundant header in blog page

--- a/src/components/ArticlePreview/articlePreview.module.css
+++ b/src/components/ArticlePreview/articlePreview.module.css
@@ -3,15 +3,11 @@
   flex-direction: column;
 }
 
-@media screen and (min-width: 650px) {
-  .preview {
-    flex-direction: row;
-  }
-}
-
 .previewTitle {
   font-size: 1.5em;
   margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
 }
 
 .previewImage {
@@ -20,7 +16,11 @@
 }
 
 .previewTextBox {
-  margin-left: 20px;
+  display: flex;
+  margin-left: 0px;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
 }
 
 .tag {
@@ -32,4 +32,20 @@
   border-radius: 2px;
   border: 1px solid #a0a0a0;
   margin-right: 0.5em;
+}
+
+@media screen and (min-width: 650px) {
+  .preview {
+    flex-direction: row;
+  }
+
+  .previewTextBox {
+    margin-left: 20px;
+    display: block;
+    margin-top: 0;
+  }
+
+  .previewTitle {
+    text-align: left;
+  }
 }
